--- a/playground.ipynb
+++ b/playground.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +234,204 @@
     "\n",
     "- scaler.npy - Contains mean and std\n",
     "- npz files stored the original data, which is then converted to npy data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Installing Jena Climate Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/mnassrib/jena-climate?dataset_version_number=1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 13.2M/13.2M [00:02<00:00, 4.97MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to dataset files: C:\\Users\\Ayush\\.cache\\kagglehub\\datasets\\mnassrib\\jena-climate\\versions\\1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import kagglehub\n",
+    "\n",
+    "# Download latest version\n",
+    "path = kagglehub.dataset_download(\"mnassrib/jena-climate\")\n",
+    "\n",
+    "print(\"Path to dataset files:\", path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using M4 dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4227, 15)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m4_test = pd.read_csv(\"m4_monthly_dataset\\Daily-test.csv\")\n",
+    "m4_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4227, 9920)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m4_train = pd.read_csv(\"m4_monthly_dataset\\Daily-train.csv\")\n",
+    "m4_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparing Energy Dataset for RLMC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2004-01-05</th>\n",
+       "      <td>100396.665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-01-06</th>\n",
+       "      <td>101124.330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-01-07</th>\n",
+       "      <td>101033.815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-01-08</th>\n",
+       "      <td>101820.800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-01-09</th>\n",
+       "      <td>101460.760</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     0\n",
+       "2004-01-05  100396.665\n",
+       "2004-01-06  101124.330\n",
+       "2004-01-07  101033.815\n",
+       "2004-01-08  101820.800\n",
+       "2004-01-09  101460.760"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"energy_dataset\\sg_daily_data.csv\", index_col = 0)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Required data files and their names\n",
+    "\n",
+    "- scaler.npy - Contains mean and std\n",
+    "- bm_train_preds.npy - Contains base model predictions for training set\n",
+    "- bm_valid_preds.npy - Contains base model predictions for validation set\n",
+    "- bm_test_preds.npy - Contains base model predictions for test set"
    ]
   }
  ],
